--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "create-excalidraw-svg",
-  "version": "0.1.0",
+  "version": "0.1.0-0",
   "description": "Initializes an Excalidraw SVG file",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ncc build -s src/index.js -o dist"
+    "build": "rm -rf dist && ncc build -s src/index.js -o dist"
   },
   "author": "Thai Pangsakulyanont <dtinth@spacet.me>",
   "license": "ISC",
